// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericToast should render as expected with detail content 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mx_Toast_description"
    >
      <div>
        Description
      </div>
    </div>
    <div
      aria-live="off"
      class="mx_Toast_buttons"
    >
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_outline"
        role="button"
        tabindex="0"
      >
        Reject
      </div>
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
        role="button"
        tabindex="0"
      >
        Accept
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GenericToast should render as expected without detail content 1`] = `
<DocumentFragment>
  <div>
    <div
      class="mx_Toast_description"
    >
      <div>
        Description
      </div>
      <div
        class="mx_Toast_detail"
      >
        Detail
      </div>
    </div>
    <div
      aria-live="off"
      class="mx_Toast_buttons"
    >
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_danger_outline"
        role="button"
        tabindex="0"
      >
        Reject
      </div>
      <div
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
        role="button"
        tabindex="0"
      >
        Accept
      </div>
    </div>
  </div>
</DocumentFragment>
`;
